# YuvLib

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zyl/yuvlib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/: ConnectionReceiver.kt  ContentUtil.kt  OnNetworkChangeListener.kt  OrientationHandler.kt
app/src/main/java/com/zyl/yuvlib/: BaseActivity.kt  FFmpegApplication.java  LivePusherNew.java  MainActivity.kt  YuvUtils.java
app/src/main/java/com/zyl/yuvlib/camera/: Camera2Helper.java  Camera2Listener.java  CameraHelper.java  CameraType.java
app/src/main/java/com/zyl/yuvlib/listener/: LiveStateChangeListener.java  OnFrameDataCallback.java
app/src/main/java/com/zyl/yuvlib/param/: AudioParam.java  VideoParam.java
app/src/main/java/com/zyl/yuvlib/stream/: AudioStream.java  VideoStream.java  VideoStreamBase.java  VideoStreamNew.java
app/src/main/java/com/zyl/yuvlib/util/: AvcEncoder.java  YuvUtils.java
app/src/main/res/layout/: activity_live.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zyl/yuvlib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
